NetBSD Problem Report #44006

From www@NetBSD.org  Thu Oct 28 17:41:42 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1021E63B942
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 28 Oct 2010 17:41:42 +0000 (UTC)
Message-Id: <20101028174141.D1C1063B8F2@www.NetBSD.org>
Date: Thu, 28 Oct 2010 17:41:41 +0000 (UTC)
From: gralph@post-ist-da.de
Reply-To: gralph@post-ist-da.de
To: gnats-bugs@NetBSD.org
Subject: vi: CTRL-A does not handle end-of-word correctly        
X-Send-Pr-Version: www-1.0

>Number:         44006
>Category:       bin
>Synopsis:       vi: CTRL-A does not handle end-of-word correctly
>Confidential:   no
>Severity:       serious
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Oct 28 17:45:01 +0000 2010
>Closed-Date:    Sat Oct 30 09:46:05 +0000 2010
>Last-Modified:  Sun Nov 21 22:05:02 +0000 2010
>Originator:     Ralph G
>Release:        NetBSD 5.0
>Organization:
>Environment:
NetBSD myname.net 5.0 NetBSD 5.0 (GENERIC) #0: Sun Apr 26 18:50:08 UTC 2009  builds@b6.netbsd.org:/home/builds/ab/netbsd-5-0-RELEASE/i386/200904260229Z-obj/home/builds/ab/netbsd-5-0-RELEASE/src/sys/arch/i386/compile/GENERIC i386
>Description:
It seems that the search pattern does not include the word end.    
I.e. pressing CTRL-A with the cursor on 'asd' matches 'asdf', too.

>How-To-Repeat:
echo asd fgh jkl mno asdf asd >/tmp/vitest

vi /tmp/vitest

Then press CTRL-A

>Fix:
Debian has a fix for the problem. 
Locate the file nvi_1.81.6-8.1.diff.gz,
it should be available on any debian mirror.
(Look for '15search_word.dpatch')

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44006 CVS commit: src/dist/nvi/vi
Date: Thu, 28 Oct 2010 14:12:48 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Thu Oct 28 18:12:47 UTC 2010

 Modified Files:
 	src/dist/nvi/vi: v_search.c

 Log Message:
 PR/44006: Ralph G: vi: CTRL-A does not handle end-of-word correctly
 End-of-word was not included in search regexp leading to false positives.
 http://patches.ubuntu.com/by-release/extracted/debian/n/nvi/1.81.6-7/15search_word.dpatch


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/dist/nvi/vi/v_search.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Fri, 29 Oct 2010 08:40:35 +0000
State-Changed-Why:
Christos committed a fix as suggested -- ok to close?


From: Ralph G <gralph@post-ist-da.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/44006 (vi: CTRL-A does not handle end-of-word correctly)
Date: Fri, 29 Oct 2010 19:39:04 +0200

 On Fri, Oct 29, 2010 at 08:40:36AM +0000, wiz@NetBSD.org wrote:
 > Synopsis: vi: CTRL-A does not handle end-of-word correctly
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: wiz@NetBSD.org
 > State-Changed-When: Fri, 29 Oct 2010 08:40:35 +0000
 > State-Changed-Why:
 > Christos committed a fix as suggested -- ok to close?

 Yes

 Thanks,
 Ralph

State-Changed-From-To: feedback->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sat, 30 Oct 2010 09:46:05 +0000
State-Changed-Why:
Confirmed fixed, thanks for the PR!


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44006 CVS commit: [netbsd-5] src/dist/nvi/vi
Date: Sun, 21 Nov 2010 22:03:00 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sun Nov 21 22:03:00 UTC 2010

 Modified Files:
 	src/dist/nvi/vi [netbsd-5]: v_search.c

 Log Message:
 Pull up following revision(s) (requested by christos in ticket #1467):
 	dist/nvi/vi/v_search.c: revision 1.3
 PR/44006: Ralph G: vi: CTRL-A does not handle end-of-word correctly
 End-of-word was not included in search regexp leading to false positives.
 http://patches.ubuntu.com/by-release/extracted/debian/n/nvi/1.81.6-7/15search_wo
 rd.dpatch


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.2.6.1 -r1.1.1.2.6.2 src/dist/nvi/vi/v_search.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.