PR/44006: Ralph G: vi: CTRL-A does not handle end-of-word correctly End-of-word was not included in search regexp leading to false positives. http://patches.ubuntu.com/by-release/extracted/debian/n/nvi/1.81.6-7/15search_word.dpatch